--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -89,6 +89,19 @@ jobs:
           ./hello_world
 
 
+  ubuntu_18_04:
+    name: Ubuntu-18.04
+    runs-on: ubuntu-18.04
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Setup ccache
+        id: setup_ccache
+        uses: ./
+
+
   windows:
     name: Windows
     runs-on: windows-latest
