Revise default cache key
Now the store/restore cache key is defined as:
"setup-ccache-action_<workflow name>_<job name>_<job OS version>_<PR name (if exist)>"

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -35,6 +35,7 @@ jobs:
         run: |
           whoami
           echo ~
+          env
           pwd
           df -h
           echo "$PATH"
@@ -72,6 +73,7 @@ jobs:
         run: |
           whoami
           echo ~
+          env
           pwd
           df -h
           echo "$PATH"
