--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,7 +1,7 @@
 name: Testing
 on: [pull_request, push]
-
-permissions: {}
+permissions:
+  actions: write
 
 jobs:
   macos:
@@ -71,6 +71,8 @@ jobs:
       - name: Setup ccache
         id: setup_ccache
         uses: ./
+        with:
+          remove_stale_cache: false
 
       - name: Print environment
         run: |
@@ -98,6 +100,7 @@ jobs:
   ubuntu_18_04:
     name: Ubuntu-18.04
     runs-on: ubuntu-18.04
+    permissions: {}  # test for missing permission for `remove_stale_cache`
 
     steps:
       - name: Checkout repository
