--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@actions/cache": "^3.0.6",
     "@actions/core": "^1.10.0",
     "@actions/exec": "^1.1.1",
+    "@actions/github": "^5.1.1",
     "@actions/io": "^1.1.2"
   },
   "devDependencies": {
