--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,6 @@
         "noImplicitAny": true,
         "removeComments": true,
         "strict": true,
-        "target": "ES6"
+        "target": "es2021"
     }
 }
