--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions":
     {
         "esModuleInterop": true,
-        "moduleResolution": "Node",
+        "module": "nodenext",
         "noImplicitAny": true,
         "removeComments": true,
         "strict": true,
