--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@actions/io": "^1.1.3"
   },
   "devDependencies": {
+    "@types/node": "*",
     "@typescript-eslint/eslint-plugin": "*",
     "@typescript-eslint/parser": "*",
     "@vercel/ncc": "*",
